--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h1 {
     margin: 0 auto;
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-auto-rows: 300px;
     grid-auto-flow: dense;
 }
