--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body {
     background-color: #121212;
 }
 
+/* 타이틀 */
+
 .title {
     font-size: 3em;
     text-align: center;
@@ -24,6 +26,7 @@ body {
     color: white;
 }
 
+/* 그리드 효과 */
 
 .grid__wrapper>div {
     position: relative;
@@ -45,11 +48,8 @@ body {
     transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
-.grid__wrapper>div:hover .download-btn {
-    opacity: 1;
-    transform: translateY(0);
-}
 
+/* 나의 사진 */
 .producer__info {
     position: relative;
     overflow: hidden;
@@ -73,11 +73,14 @@ body {
     transform: translateY(0);
 }
 
+/* 나의 사진 */
 .grid__wrapper>div>p {
     position: absolute;
     bottom: 10px;
     right: 10px;
 }
+
+/* 다운로드 버튼 */
 
 .download-btn {
     position: absolute;
@@ -100,6 +103,14 @@ body {
     background-color: rgba(255, 255, 255, 1);
 }
 
+
+.grid__wrapper>div:hover .download-btn {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+/* 그리드 레이아웃 */
+
 .grid__wrapper {
     max-width: 1200px;
     margin: 0 auto;
@@ -111,6 +122,7 @@ body {
 
 }
 
+/* 그리드 사이즈 */
 .grid__wrapper .wide {
     grid-column: span 2;
 }
@@ -125,6 +137,9 @@ body {
 }
 
 
+
+
+/* 푸터 */
 #footer__wrapper {
     color: white;
     text-align: center;
@@ -158,8 +173,9 @@ body {
     text-decoration: underline;
 }
 
-/* 웹 화면 기본 스타일 그대로 유지 */
-
+.copyright {
+    font-size: 15px;
+}
 
 /* 테블릿  */
 @media (max-width: 1024px) {
